--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html {
     font-family: sans-serif;
+    font-size: 18px;
 }
 
 body {
@@ -14,7 +15,19 @@ header {
     flex-direction: column;
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 0 2em;
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 0.5em 2em;
+    border: 4px solid #F9FAF8;
+    border-radius: 8px;
+    font-size: 18px;
+}
+
+#hero-signup {
+    border: none;
 }
 
 nav {
@@ -37,4 +50,29 @@ nav a {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 4em;
+}
+
+#hero-text {
+    max-width: 450px;
+}
+
+#hero-text h1 {
+    margin-bottom: 0;
+}
+
+#hero-text p {
+    margin-top: 0;
+    margin-bottom: 1em;
+}
+
+#hero-image {
+    width: 600px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: lightgray;
+    color: gray;
+    margin-left: 1em;
 }
