--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
 }
 
@@ -18,12 +18,14 @@ header {
 }
 
 button {
-    background-color: #3882F6;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
     color: #F9FAF8;
+    background-color: #3882F6;
     padding: 0.5em 2em;
     border: 4px solid #F9FAF8;
     border-radius: 8px;
-    font-size: 18px;
 }
 
 #hero-signup {
@@ -64,6 +66,7 @@ nav a {
 #hero-text p {
     margin-top: 0;
     margin-bottom: 1em;
+    color: #E5E7EB;
 }
 
 #hero-image {
@@ -75,4 +78,102 @@ nav a {
     background-color: lightgray;
     color: gray;
     margin-left: 1em;
+}
+
+#information {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0 8em;
+}
+
+#information h1 {
+    font-size: 36px;
+    color: #1F2937;
+    margin-bottom: 0;
+}
+
+#information div {
+    display: flex;
+    justify-content: space-between;
+}
+
+#information article {
+    display: flex;
+    flex-direction: column;
+    color: #1F2937;
+    text-align: center;
+    padding: 2em;
+    margin-bottom: 2em;
+}
+
+article > div,.article-image {
+    border: 4px solid #3882F6;
+    min-width: 200px;
+    min-height: 200px;
+    border-radius: 8px;
+    align-self: center;
+}
+
+#quotes {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    padding: 4em 8em;
+    background-color: #E5E7EB;
+}
+
+#quotes blockquote {
+    font-size: 36px;
+    font-weight: light;
+    color: #1F2937;
+    font-style: italic;
+}
+
+#quotes > p {
+    font-weight: bold;
+    margin-top: 0px;
+    text-align: right;
+}
+
+#call-to-action {
+    padding: 4em;
+    display: flex;
+    justify-content: center;
+}
+
+.call-to-action-content {
+    background-color: #3882F6;
+    padding: 1em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 1200px;
+    border-radius: 16px;
+}
+
+.call-to-action-text {
+    display: flex;
+    flex-direction: column;
+    color: #F9FAF8;
+    margin-right: 24px;
+}
+
+.call-to-action div button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+}
+
+.call-to-action-text h2 {
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+.call-to-action-text p {
+    font-weight: light;
+    margin-top: 0;
 }
