--- a/index.css
+++ b/index.css
@@ -101,19 +101,19 @@ nav a {
 
 #information article {
     display: flex;
-    flex-direction: column;
+    flex-flow: row wrap;
+    justify-content: center;
     color: #1F2937;
     text-align: center;
-    padding: 2em;
     margin-bottom: 2em;
 }
 
-article > div,.article-image {
+article > .article-image {
+    width: 200px;
+    height: 200px;
     border: 4px solid #3882F6;
-    min-width: 200px;
-    min-height: 200px;
+    margin-top: 1em;
     border-radius: 8px;
-    align-self: center;
 }
 
 #quotes {
